--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Test</title>
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="/css/style.css" type="text/css">
 	</head>
 	<body>
 		One two three four.
